tests/NormalTests/paczka1/fuzzy1/25640363.err
Error in line 1: EIZB S550 60,0
Error in line 4: MSMVYoQhhoe S820 55,2
Error in line 8: 0mYW4wDeR A870 7,9
Error in line 16: EIZB S820 91,25
Error in line 14: 78q S550 92,6
Error in line 18: 78q A870 18,4
Error in line 22: 78q S820 69,7
Error in line 35: 0mYW4wDeR S820 297,1
Error in line 23: 77Jh5xj2 S820 57,1
